--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rrcipe</title>
+    <title>Recipe</title>
 </head>
 <body>
-    <h1><a href="./recipe.html"></a>Nigerian Fried Rice Recipe</h1>
+    <h1><a href="./recipe.html">Nigerian Fried Rice Recipe</a></h1>
 </body>
+
 </html>
